# levite

./: CMakeLists.txt  LICENSE  README.md  example.csv
.github/workflows/: build.yml
src/: cell.cpp  cell.hpp  color.cpp  color.hpp  command.cpp  coordinates.cpp  coordinates.hpp  event.cpp  input.hpp  main.cpp  range.cpp  range.hpp  registry.cpp  registry.hpp  screen.cpp  screen.hpp  setting.cpp  setting.hpp  sheet.cpp  sheet.hpp  termbox2.h  utils.cpp  utils.hpp
